--- a/Ejobs/templates/header.html
+++ b/Ejobs/templates/header.html
@@ -1,21 +1,91 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Home</title>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-</head>
+    
+  </head>
+    <div class="container">
+      <nav class="top-nav">
+        <div class="logo">
+        <a href="{% url 'home' %}">
+           <img src="{% static "images/ej.png" %}" alt="logo"/ height="50px">
+        </a>
+        </div>
+        <ul class="nav-items">
+          {% if user.is_authenticated %}
+          {% if user.is_staff %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'recruiter_dashboard' %}">Dashboard</a></li>
+          {% else %}
 
-<nav>
-    <div class="logo"><img src="{% static "images/ej.png" %}" alt="logo"/ height="50px"></div>
-    <ul class="nav-items">
-        <li class="nav-item"><a href="/"> <i class="fas fa-home"></i> Home</a></li>
-        <li class="nav-item"><a href="{% url 'login' %}"> <i class="fas fa-sign-in-alt"></i> Login</a></li>
-        <li class="nav-item"><a href="{% url 'seeker_register' %}"><i class="fas fa-user-plus"></i> Register</a></li>
-        <li class="nav-item"><a href="{% url 'recruiter_register' %}"><i class="fas fa-puzzle-piece"></i> Recruiter  portal</a></li>
-        <li class="nav-item"><a href="{% url 'about_us' %}"><i class="fas fa-address-card"></i> About us</a></li>
-    </ul>
-</nav>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'seeker_dashboard' %}">Dashboard</a></li>
+          {% endif %}
+          {% else %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'home' %}">Home</a></li>
+          
+          {% endif %}
+
+
+
+          {% if user.is_staff %}
+          {% else %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'jobs' %}">Available Jobs</a></li>
+          {% endif %}
+          {% if user.is_authenticated %}
+
+          {% if user.is_staff %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'applicants' %}">Applicants</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'profile' %}">Org. Profile</a></li>
+          <li class="nav-item"><a class="nav-item-link" id="myBtn" >Logout</a></li>
+          {% else %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'saved_jobs' %}">Saved Jobs</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'appliedJobs' %}">Applied Jobs</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'profile' %}">Profile</a></li>
+          <li class="nav-item"><a class="nav-item-link" id="myBtn" >Logout</a></li>
+          {% endif %}
+          {% else %}
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'login' %}">Login</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'seeker_register' %}">Signup</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="{% url 'feedback' %}">Contact us</a></li>
+          {% endif %}
+          
+        </ul>
+      </nav>
+
+
+
+
+
+
+
+
+
+
+
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Are you sure you want to logout?</p><a href="{% url 'logout' %}"><button class="btn btn-primary  " style="" ><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+  </div>
+
+</div>
+<script>
+var modal = document.getElementById("myModal");
+var btn = document.getElementById("myBtn");
+var span = document.getElementsByClassName("close")[0];
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+span.onclick = function() {
+  modal.style.display = "none";
+}
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
