--- a/Ejobs/templates/jobs/addJob.html
+++ b/Ejobs/templates/jobs/addJob.html
@@ -1,7 +1,7 @@
 
-{% include 'recruiter/recruiterHeader.html' %}
-{% load static %} 
-<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
+{% include 'header.html' %}
+{% comment %} {% load static %} 
+<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" /> {% endcomment %}
 {% block content %}
 <div class="job-container"style="margin-top:200px; margin-bottom:300px;">
   <div class="form-group form-listJob">
