--- a/Ejobs/templates/jobs/job_details.html
+++ b/Ejobs/templates/jobs/job_details.html
@@ -9,6 +9,7 @@
           <p class="job-desc">Job Description: {{ job.job_description }}</p>
           <p>Employer: {{ job.job_employer }}</p>
           <p>Position: {{ job.job_position }}</p>
+          <p>Location: {{ job.job_location }}</p>
           <div class="job-category-wrapper">
             <p class="job-item-category">Category:</p>
             <p></p>
