--- a/Ejobs/templates/recruiter/recruiterHeader.html
+++ b/Ejobs/templates/recruiter/recruiterHeader.html
@@ -11,9 +11,9 @@
     <div class="logo"><img src="{% static "images/ej.png" %}" alt="logo"/ height="50px"></div>
 
     <ul class="nav-items">
-        <li class="nav-item"><a href="{% url 'recruiter_dashboard' %}"><i class="fas fa-home"></i>  Home</a></li>
-        <li class="nav-item"><a href="{% url 'recruiter_profile' %}"> <i class="fas fa-building"></i> Org. Profile </a></li> 
-        <li class="nav-item"><a href="{% url 'applicants' %}"><i class="fas fa-mail-bulk"></i>  applicants</a></li>
-        <li class="nav-item"><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>  Logout</a></li>
+        <li class="nav-item"><a href="{% url 'recruiter_dashboard' %}">   Home</a></li>
+        <li class="nav-item"><a href=" ">   Org. Profile </a></li> 
+        <li class="nav-item"><a href="{% url 'applicants' %}">   applicants</a></li>
+        <li class="nav-item"><a href="{% url 'logout' %}">  Logout</a></li>
     </ul>
 </nav>
