--- a/Ejobs/templates/recruiter/recruiter_register.html
+++ b/Ejobs/templates/recruiter/recruiter_register.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-  {% include 'header1.html'%}
+  {% include 'header.html'%}
     <main class="signup auth" >
       <div class="container">
         <div class="auth-left">
@@ -100,6 +100,15 @@
                   required="true"
                   name="password1"
                   placeholder="Password"
+                />
+              </div>
+              <div class="form-item">
+                <input
+                  type="text"
+                  class="form-input"
+                  name="bio"
+                  required="true"
+                  placeholder="enter company bio"
                 />
               </div>
               <div class="form-item">
