--- a/Ejobs/templates/feedback/feedback.html
+++ b/Ejobs/templates/feedback/feedback.html
@@ -1,4 +1,5 @@
-{% include 'header1.html' %}
+{% include 'header.html' %}
+<title>Feedback</title>
 <main class="signup auth" >
       <div class="container">
         <div class="auth-left">
@@ -12,11 +13,11 @@
         <div class="auth-right" style="margin-top:35px; margin-bottom:20px;>
           <div class="auth-form-wrapper">
             <form action="{% url 'feedback' %}" method="post" enctype="multipart/form-data">
-            <h2>Feedback form</h2>
+            <h2>Feedback Form</h2>
               {% csrf_token %}
               <div class="form-item">
                 <label for="image">Provide screenshots if any:</label>
-                <input type="file" id="image" name="image" accept="image/*">
+                <input type="file" id="image" name="image" accept="image/*" required="true">
               </div>
               <div class="form-item">
                 <input
