--- a/Ejobs/templates/homepage.html
+++ b/Ejobs/templates/homepage.html
@@ -1,61 +1,125 @@
-{% include "header1.html" %}
-    <main class="hero">
-    
-        <div class="container">
-            <div class="hero-left">
-                <h1 class="hero-title"><u>COVID-19 Unemployment Response</u></h1>
-                <p class="hero-desc">The Coronavirus (COVID-19) pandemic has been brutal on Nepal's workforce, and merojob is committed to helping the superheroes of Nepal's economy.
-                <br><br>It is estimated that millions of Nepalese will lose their jobs. This section is dedicated to bridging active employers and active job-seekers in the fastest way.</p>
-                <div class="cta">
-                    <div class="search-bar">
-                        <div style="height: 10px;">
-                        </div>
-                        <form method="get" action="{% url 'search' %}" class="search-bar">            
-                            <input type="search" placeholder="Search your job" name="query" id="query" class="search-bar-input">
-                            <button class="get-started-btn btn-primary" type ="submit">SEARCH</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="hero-right">
-                <div class="hero-right-image">
-                    <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
-                </div>
-            </div>
-                <div class="popup-msg">
-                {% for message in messages %}
-                    <p class="popup-msg-text">{{message}}</h1>
-                {% endfor %}
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <nav class="top-nav">
+        <div class="logo">
+          logo
         </div>
-    </main>
-    <section class="services">
-        <div class="services-container section-container">
-            <h3>Our Services</h3>
-            <ul class="services-items">
-                <li class="services-item"><a  href="{% url 'home' %}">
-                    <i class="fa fa-search"></i>
-                    <p>Job Search</p></a>
-                </li>
-                <li class="services-item"><a  href="{% url 'login' %}">
-                    <i class="fa fa-user-friends"></i>
-                    <p>Recruitment</p></a>
-                </li>
-                <li class="services-item"><a  href="{% url 'login' %}">
-                    <i class="fa fa-home"></i>
-                    <p>Placement</p></a>
-                </li>
+        <ul class="nav-items">
+          <li class="nav-item"><a class="nav-item-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="jobs.html">Available Jobs</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="login.html">Login</a></li>
+          <li class="nav-item"><a class="nav-item-link" href="signup.html">Signup</a></li>
+        </ul>
+      </nav>
+      <div class="hero-wrapper section-wrapper">
+        <main class="hero">
+          <div class="hero-welcome-text">
+            <h1 class="hero-big-text">Your perfect job partner</h1>
+            <p class="hero-small-text">Find the perfect job you need to grow</p>
+            <div class="hero-search-section">
+              <form action="" class="hero-search-form">
+                <input
+                  type="text"
+                  class="hero-search"
+                  placeholder="Software Engineer"
+                />
+                <input
+                  type="submit"
+                  value="Find your job"
+                  class="hero-btn btn btn-primary"
+                />
+              </form>
+            </div>
+          </div>
+          <div class="hero-image-wrapper">
+            <img
+              src="./assets/homeImage.png"
+              alt="home page image"
+              class="hero-image"
+            />
+          </div>
+        </main>
+        <section class="our-services section-wrapper">
+          <h2 class="section-title">Our Services</h2>
+          <div class="services-lower-image-wrapper">
+              <img src="./assets/servicesLeftLow.png" alt="" class="services-lower-image">
+          </div>
+          <div class="services-cards-wrapper">
+            <ul class="services-cards">
+              <li class="services-card">
+                <h1 class="services-card-number">1</h1>
+                <div class="services-card-content">
+                  <div class="services-card-top">
+                    <i class="fas fa-search"></i>
+                    <h3 class="services-card-title">Job Search</h3>
+                  </div>
+                  <p class="services-card-bottom">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
+                    tempo eirmod tempor,eirmod tempo
+                  </p>
+                </div>
+              </li>
+              <li class="services-card">
+                <h1 class="services-card-number">2</h1>
+                <div class="services-card-content">
+                  <div class="services-card-top">
+                    <i class="fas fa-search"></i>
+                    <h3 class="services-card-title">Job Search</h3>
+                  </div>
+                  <p class="services-card-bottom">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
+                    tempo eirmod tempor,eirmod tempo
+                  </p>
+                </div>
+              </li>
+              <li class="services-card">
+                <h1 class="services-card-number">3</h1>
+                <div class="services-card-content">
+                  <div class="services-card-top">
+                    <i class="fas fa-search"></i>
+                    <h3 class="services-card-title">Job Search</h3>
+                  </div>
+                  <p class="services-card-bottom">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
+                    tempo eirmod tempor,eirmod tempo
+                  </p>
+                </div>
+              </li>
             </ul>
-        </div>
-    </section>
-    <section class="motto">
-        <div class="motto-wrapper">
-            <div class="motto-text">
-                <h2>WHO UNDERSTANDS IT'S PERSONAL?<br> WE DO.<br><br>TO US,<br>IT'S ABOUT YOU</h2>
-                <p>Search, Apply & Get Jobs in Nepal - Free</p>
+          </div>
+        </section>
+        <section class="more section-wrapper">
+            <p class="more-section-text">
+                WHO UNDERSTANDS IT PERSONALLY?
+                <br>
+                WE DO.
+            </p>
+            <div class="more-image-line">
+                <img src="./assets/homeBottomImageLine.png" alt="" class="more-image">
             </div>
-        </div>
-    </section>
-</body>
-{% include "footer.html" %}
+          <div class="more-image-wrapper">
+            <img src="./assets/homeBottomImage.png" alt="" class="more-image" />
+          </div>
+          
+        </section>
+      </div>
+    </div>
+  </body>
+</html>
