--- a/Ejobs/templates/index.html
+++ b/Ejobs/templates/index.html
@@ -1,20 +1,5 @@
 {% load static %} {% include "header.html" %}
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="./style.css" />
-  </head>
+<title>Home</title>
   <body>
     <div class="container">
       <div class="hero-wrapper section-wrapper">
@@ -114,5 +99,9 @@
         </section>
       </div>
     </div>
-  </body>
-</html>
+    {% include "footer.html" %}
+<div class="popup-msg">
+  {% for message in messages %}
+      <p class="popup-msg-text">{{message}}</h1>
+  {% endfor %}
+</div
