--- a/Ejobs/templates/seeker/profile.html
+++ b/Ejobs/templates/seeker/profile.html
@@ -1,173 +1,106 @@
-{% if user.is_staff %}
-  {% include 'recruiter/recruiterHeader.html' %}
-{% else %}
-  {% include 'seeker/seekerHeader.html' %}
-{% endif %}
-
-<!-- Navbar -->
-<div class="nav1">
-  <div class="container1">
-    <h1>MY PROFILE</h1>
-  </div>
-</div>
-
-<!-- Content -->
-<div class="content">
-{% for userdata in userdata %}
-  <!-- Profile Section -->
-  <div class="profile-section">
-    <div class="container1">
-      <img src="{{userdata.image.url}}" alt="Avatar" class="profile-photo">
-      <p class="profile-name">{{request.user.first_name}} {{request.user.last_name}}</p>
-
-
-
-      {% if user.seekeradditionaldetails and user.seekersocialdetails%}
-  <a href=""><button class="button profile-follow">Edit your profile</button></a >
-
-{% elif user.seekeradditionaldetails and not user.seekersocialdetails %}
-  <a href="{% url 'social_details' %}"><button class="button profile-follow">Add social details</button></a >
-
-{% else %}
-  <a href=""><button class="button profile-follow">Edit your profile</button></a >
-  <a href="{% url 'additional_details' %}"><button class="button profile-follow">Complete your profile</button></a >
-
-{% endif %}
-      <a href="{% url 'password_change' %}"><button class="button profile-follow">Change password</button></a>
-    </div>
-  </div>
-  <!-- Detail Section -->
-  <div class="detail-section">
-    <div class="container1">
-
-      <div class="card">
-        <div class="container1">
-          <div class="card-title">Basic details</div>
+{% include 'header.html' %}
+<section class="profile-wrapper section-wrapper">
+        <div class="profile-top-wrapper">
+          <div class="profile-image-wrapper">
+          {% for userdata in userdata %}
+            <img src="{{userdata.image.urll}}" class="profile-image" alt="avatar" />
+          </div>
+          <div class="profile-image-details">
           
-            <li class="profile-item profile-first-name">
-              <small class="profile-item-title">First Name</small>
-              <p class="profile-item-text">{{request.user.first_name}}</p>
-            </li>
-            <li class="profile-item profile-last-name">
-              <small class="profile-item-title">Last Name</small>
-              <p class="profile-item-text">{{request.user.last_name}}</p>
-            </li>
-            <li class="profile-item profile-email">
-              <small class="profile-item-title">Email</small>
-              <p class="profile-item-text">{{request.user.email}}</p>
-            </li>
-            
-            <li class="profile-item profile-contact">
-              <small class="profile-item-title">Contact</small>
-              <p class="profile-item-text">{{userdata.contact}}</p>
-            </li>
-            <li class="profile-item profile-gender">
-              <small class="profile-item-title">Gender</small>
-              <p class="profile-item-text">{{userdata.gender}}</p>
-            </li>
-            <li class="profile-item profile-gender">
-              <small class="profile-item-title">Address</small>
-              <p class="profile-item-text">{{userdata.address}}</p>
-            </li>
-            <li class="profile-item profile-user-type">
-              <small class="profile-item-title">User Type</small>
-              <p class="profile-item-text">Seeker</p>
-            </li>
-          <div class="card-body">
-          {% endfor %}
+           
+            <h4>{{request.user.first_name}} {{request.user.last_name}}</h4>
+            <p class="profile-bio">
+              {{userdata.bio}}
+            </p>
           </div>
         </div>
-      </div>
-
-      <div class="card">
-        <div class="container1">
-
-          <div class="card-title">Additional details</div>
-          <div class="card-body">
-          {% for adddata in adddata %}
-
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">University</small>
-      <p class="profile-item-text">{{adddata.university}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Qualification</small>
-      <p class="profile-item-text">{{adddata.qualification}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Skills</small>
-      <p class="profile-item-text">{{adddata.skills}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Preferred job category</small>
-      <p class="profile-item-text">{{adddata.preferred_job_category}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Available for</small>
-      <p class="profile-item-text">{{adddata.available_for}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Work Experience</small>
-      <p class="profile-item-text">{{adddata.work_experience}}</p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Preferred Location</small>
-      <p class="profile-item-text">{{adddata.preferred_location}}</p>
-    </li>
+        <ul class="profile-info">
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Username</h5>
+            <p class="profile-info-detail">{{request.user.username}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Gender</h5>
+            <p class="profile-info-detail">{{userdata.gender}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Address</h5>
+            <p class="profile-info-detail">{{userdata.address}}</p>
+          </li>
+        </ul>
+        
+        
+        {% for adddata in adddata %}
+        <h1>Additional details</h1>
+        <ul class="profile-info">
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">University</h5>
+            <p class="profile-info-detail">{{adddata.university}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Qualification</h5>
+            <p class="profile-info-detail">{{adddata.qualification}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Skills</h5>
+            <p class="profile-info-detail">{{adddata.skills}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Work Experience</h5>
+            <p class="profile-info-detail">{{adddata.work_experience}}</p>
+          </li>
+           <li class="profile-info-items">
+            <h5 class="profile-info-title">Skills</h5>
+            <p class="profile-info-detail">{{adddata.skills}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Preferred Job Category</h5>
+            <p class="profile-info-detail">{{adddata.preferred_job_category}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Preferred location</h5>
+            <p class="profile-info-detail">{{adddata.preferred_location}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Preferred location</h5>
+            <p class="profile-info-detail">{{adddata.available_for}}</p>
+          </li>
+        </ul>
     {% endfor %}
-          
-             
-          </div>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="container1">
-          <div class="card-title">Social details</div>
-          <div class="card-body">
+
+        <h1>Contact details</h1>
+        <ul class="profile-info">
+        <li class="profile-info-items">
+            <h5 class="profile-info-title">Email</h5>
+            <p class="profile-info-detail">{{request.user.email}}</p>
+          </li>
+          <li class="profile-info-items">
+            <h5 class="profile-info-title">Contact</h5>
+            <p class="profile-info-detail">{{userdata.contact}}</p>
+          </li>
           {% for socialdata in socialdata %}
-    
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Facebook</small>
-      <p class="profile-item-text">
-        {% comment %} <a href="{{socialdata.facebook}}">{{socialdata.facebook}}</a> {% endcomment %}
-        <a href="{{socialdata.facebook}}" target="popup"  onclick="tab.open('{{socialdata.facebook}}','name')">{{socialdata.facebook}}</a>
-      </p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Instagram</small>
-      <p class="profile-item-text">
-      {% comment %} <a href="{{socialdata.instagram}}">{{socialdata.instagram}}</a> {% endcomment %}
-      <a href="{{socialdata.instagram}}" target="popup"  onclick="tab.open('{{socialdata.instagram}}','name')">{{socialdata.instagram}}</a>
-      </p>
-    
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Twitter</small>
-      <p class="profile-item-text">
-      {% comment %} <a href="{{socialdata.twitter}}">{{socialdata.twitter}}</a> {% endcomment %}
-      <a href="{{socialdata.twitter}}" target="popup"  onclick="tab.open('{{socialdata.twitter}}','name')">{{socialdata.twitter}}</a>
-      </p>
-    </li>
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Others</small>
-      <p class="profile-item-text"><a href="{{socialdata.others}}">{{socialdata.others}}</a></p>
-    </li>
+          <li class="profile-info-items">
+              <a href="{{socialdata.facebook}}" target="popup"  onclick="tab.open('{{socialdata.facebook}}','name')"><i class="fab fa-facebook-square"></i></a>
+          
+          <a href="{{socialdata.instagram}}" target="popup"  onclick="tab.open('{{socialdata.instagram}}','name')"><i class="fab fa-instagram-square"></i></a>
+          <a href="{{socialdata.twitter}}" target="popup"  onclick="tab.open('{{socialdata.twitter}}','name')"><i class="fab fa-twitter-square"></i></a>
+          <a href="{{socialdata.others}}" target="popup"  onclick="tab.open('{{socialdata.others}}','name')"><i class="fab fa-google-plus"></i></a>
+            </li>
+
+    {% endfor %}
     {% endfor %}
 
-          
-              
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
-</body>
-</html>
+
+
+
+
+
+
+
+
 
 
 
@@ -188,6 +121,5 @@
   <a href="{% url 'additional_details' %}"><button class="btn btn-primary centrebtn">Complete your profile</button></a >
 
 {% endif %} {% endcomment %}
-</ul>
-</div>
+
 {% comment %} {% include 'footer.html'  %} {% endcomment %}
