--- a/Ejobs/static/css/style.css
+++ b/Ejobs/static/css/style.css
@@ -330,6 +330,7 @@ li {
     width: 150px;
     background-color: red;
     border-radius: 50%;
+    overflow: hidden;
 }
 .profile-top-wrapper{
     display: flex;
@@ -363,7 +364,9 @@ li {
     text-align: center;
     font-size: 30px;
 }
-
+.jobs-card-top-link {
+  color: var(--text-color-dark);
+}
 /* default btn */
 .btn {
     display: inline-block;
@@ -449,7 +452,11 @@ footer {
   }
   
 
-
+  .profile-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 
 /* apply remove1 */
 
@@ -485,6 +492,10 @@ footer {
   .btns .apply{
     margin-right: 20px;
   }
+
+
+
+
   #id_user {
     display: none;
   }
@@ -614,3 +625,129 @@ footer {
   .register-user-type{
     margin-bottom: 1rem;
   }
+
+
+
+
+
+
+
+  /* job details */
+  
+.job-detail-wrapper {
+  border-radius: var(--border-radius-def);
+  overflow: hidden;
+  margin: 50px auto;
+  width: 1000px;
+  background-color: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+
+}
+.job-detail-top{
+  position: relative;
+  height: 400px;
+  overflow: hidden;
+}
+.job-detail-image{
+  height: inherit;
+  position: relative;
+}
+
+.job-detail-image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.job-provider{
+  position: absolute;
+  bottom: 0;
+  margin-left: 40px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+.job-provider-image-wrapper{
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.job-provider-image{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.job-provider-detail{
+  color: var(--text-color-light);
+  margin-left: 20px;
+}
+.job-detail-low{
+  padding: 20px 30px 40px;
+}
+.job-detail-low .job-category{
+  cursor: pointer;
+  color: white;
+  background-color: rgb(139, 42, 139);
+  padding: 7px 25px;
+  border-radius: var(--border-radius-def);
+  width: max-content;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 20px 0px ;
+}
+.job-information h4{
+  font-size: 30px;
+  color: rgb(139, 42, 139);
+  margin-bottom: 15px;
+  margin-left: 10px;
+  
+}
+h5{
+  margin-left: 15px;
+}
+.job-info-item{
+  display: flex;
+  margin-bottom: 4px;
+  
+}
+.job-info-title{
+  font-size: 14px;
+  position: relative;
+  padding-left: 10px;
+}
+.job-info-title::before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  display: inline-block;
+  padding: 2px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+}
+.job-info-desc{
+  position: relative;
+  margin-left: 10px;
+}
+
+/* b-btm is the border bottom class */
+
+.b-btm{
+  border-bottom: 1px solid rgba(200, 200, 200, 0.466);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.hero-text{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border: 1PX solid blueviolet;
+  padding: 5px;
+  margin-top: 30px;
+  
+}
+.hero-desc{
+  width: 50%;
+}
