--- a/Ejobs/templates/jobs/job_details_2.html
+++ b/Ejobs/templates/jobs/job_details_2.html
@@ -1,29 +1,91 @@
-{% include 'seeker/seekerHeader.html'%}
-<div class="container">
-  <div class="row">
-    <ul class="job-items">
-      <li class="job-item">
-        <div class="job-item-left">
-          <h2 class="job-item-title">{{ job.job_title }}</h2>
-          <p class="job-desc">Job Description: {{ job.job_description }}</p>
-          <p>Employer: {{ job.job_employer }}</p>
-          <p>Position: {{ job.job_position }}</p>
-          <div class="job-category-wrapper">
-            <p class="job-item-category">Category:</p>
-            <p></p>
-            <p class="job-category">{{ job.job_category }}</p>
+{% include 'header.html'%}
+<section class="job-detail-wrapper section-wrapper">
+        <div class="job-detail-top">
+          <div class="job-detail-image">
+          {% if 'finance' in job.job_category %}
+            <img src="https://images.unsplash.com/photo-1586021280718-53fbadcb65a7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80">
+          {% elif 'management' in job.job_category %}
+          <img src="https://images.unsplash.com/photo-1614028674026-a65e31bfd27c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+          {% else %}
+            <img
+              src="https://images.pexels.com/photos/2923034/pexels-photo-2923034.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+              alt=""
+            />
+            {% endif %}
+          </div>
+          <div class="job-provider">
+            <div class="job-provider-image-wrapper">
+              <img
+                class="job-provider-image"
+                src="https://images.pexels.com/photos/315938/pexels-photo-315938.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                alt=""
+              />
+            </div>
+            <div class="job-provider-detail">
+              <h4>Recruiter</h4>
+              <p>{{job.user.first_name}} {{job.user.last_name}}  </p>
+            </div>
           </div>
         </div>
+        <div class="job-detail-low">
+          <div class="job-detail-desc b-btm">
+            {{job.job_description}}
+          </div>
 
-        <div class="job-item-low">
-          <h5>Contact Info</h5>
-          <p>Phone: {{ job.job_phone }}</p>
-          <p>Email Us: <a href="">{{ job.job_email }}</a></p>
-          <p>Apply On Our Website: <a href="{{ job.job_website }}">{{ job.job_website }}</a></p>
-         <div class="job-item-cta">
-          <a href="{% url 'save_job' job.job_id %}"><button class="btn btn-primary"> save </button></a>
-          {% comment %} <a href="{% url 'apply_job' job.job_id %}" ><button class="btn btn-primary" style="margin-right:20px;"> APPLY</button></a> {% endcomment %}
-      <button class="btn btn-primary" style="margin-right:20px;"  onclick="openForm()" > APPLY</button>
+              <a href="{% url 'save_job' job.job_id %}"><h3 class="job-category">Save</h3></a>
+            
+              <h3 class="job-category" onclick="openForm()">Apply</h3>
+           
+          </div>
+          <div class="job-information">
+          <h4>{{job.job_title}}</h4>
+            <h5><u>Basic Job Information</u></h5>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Job Category : </h5>
+              <p class="job-info-desc">{{job.job_category}}</p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Job Employer :</h5>
+              <p class="job-info-desc">{{ job.job_employer }}</p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Phone number:</h5>
+              <p class="job-info-desc">{{ job.job_phone }}</p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Apply on our website</h5>
+              <p class="job-info-desc"><a href="{{ job.job_website }}">{{ job.job_website }}</a></p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Our Email :</h5>
+              <p class="job-info-desc">{{ job.job_email }}</p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">Job Location :</h5>
+              <p class="job-info-desc">{{ job.job_location }}</p>
+            </div>
+            <div class="job-info-item">
+              <h5 class="job-info-title">No. of Vacancies :</h5>
+              <p class="job-info-desc">{{ job.no_of_vacancy }}</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="form-popup" id="myForm">
   <form class="form-container" method="post" enctype="multipart/form-data" action="{% url 'apply_job' job.job_id %}">
@@ -48,12 +110,6 @@ function closeForm() {
 }
 </script>
 
-         
-        </div>
-        </div>
-      </li>
-      </div>
-    </ul>
-  </div>
-</div>
 
+
+{% include 'footer.html'%}
